[gd_scene load_steps=5 format=3 uid="uid://cjj6ie343hjoh"]

[ext_resource type="Script" path="res://Scripts/Collection/tape_configuration.gd" id="1_76dmi"]
[ext_resource type="Texture2D" uid="uid://vppojqhi5lv3" path="res://Sprites/K7-Icon.svg" id="2_dj6mr"]
[ext_resource type="Texture2D" uid="uid://d3qosjlhtqfct" path="res://Sprites/tape_label.svg" id="3_uldxl"]
[ext_resource type="Script" path="res://Scripts/ExternalGame/call_external_game.gd" id="4_7nuq8"]

[node name="TapeGame" type="TextureRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.8
offset_top = -5.2
offset_right = 3.80002
offset_bottom = 4.95351
grow_horizontal = 2
grow_vertical = 2
expand_mode = 5
stretch_mode = 5
script = ExtResource("1_76dmi")
gameNumber = "Game1"

[node name="TapeIcon" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -20.692
offset_top = 18.365
offset_right = 20.372
offset_bottom = -7.38998
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_dj6mr")
expand_mode = 3
stretch_mode = 5

[node name="TapeLabel" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.75
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_uldxl")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="TitleGame" type="RichTextLabel" parent="TapeLabel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.966
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "Title Game"

[node name="AuthorGame" type="RichTextLabel" parent="TapeLabel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.5
anchor_right = 0.966
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
text = "Author Name"

[node name="ToGame" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3.8
offset_top = 5.2
offset_right = -3.8
offset_bottom = 5.2
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
flat = true
script = ExtResource("4_7nuq8")

[connection signal="pressed" from="ToGame" to="ToGame" method="_on_pressed"]
